<!--
  ~ Copyright (C) 2016-2018 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Allusive</string>
    <string name="version">v1.7.1 (25)</string>
    <string name="module_description">Simple Module To Replace Touch Pointer. by sandipv22@xda.</string>
    <string name="pref_key_open_dash">key_open_dash</string>
    <string name="info_text_1">NOTE: This is just Xposed Module. You need POINTER DASHBOARD app to download/apply pointers. Click below to open/download. </string>

    <!-- urls -->
    <string name="url_xda_thread" translatable="false">https://m8rg7.app.goo.gl/pr_xda</string>
    <string name="url_prx" translatable="false">https://m8rg7.app.goo.gl/xposedRepo</string>
    <string name="url_g_plus" translatable="false">https://m8rg7.app.goo.gl/gplusComm</string>
    <string name="url_source_code" translatable="false">https://m8rg7.app.goo.gl/sourceCode</string>
    <string name="url_g_play">https://m8rg7.app.goo.gl/playStore</string>

    <string name="TITLE_XDA_THREAD">XDA Thread</string>
    <string name="TITLE_VISIT_G_PLUS">G+ Community</string>
    <string name="text_source_code">Source Code</string>
    <string name="text_module_info">Module Info</string>

    <string name="banner_ad_1_id">ca-app-pub-6628325093439880/4128118050</string>
    <string name="dash_package_name">com.afterroot.pointerdash</string>

</resources>
