<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016-2018 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:summary="@string/info_text_1" />
    <Preference
        android:key="@string/pref_key_open_dash"
        android:summary="Download from Google Play Store."
        android:title="Install Pointer Dashboard">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_g_play" />
    </Preference>

    <PreferenceCategory android:title="About">
        <Preference
            android:summary="@string/version"
            android:title="Pointer Replacer - Allusive" />
        <Preference
            android:summary="tap to visit official XDA thread"
            android:title="@string/TITLE_XDA_THREAD">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_xda_thread" />
        </Preference>
        <Preference
            android:summary="tap to visit official Google+ Community"
            android:title="@string/TITLE_VISIT_G_PLUS">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_g_plus" />
        </Preference>
        <Preference
            android:summary="tap to visit GitHub Repository"
            android:title="@string/text_source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_source_code" />
        </Preference>
        <Preference
            android:summary="tap to open Xposed Module Repo"
            android:title="@string/text_module_info">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_prx" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>